fixed the overflow outline on library & learn page links

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -908,6 +908,10 @@ h3.contribute-title {
   position: relative;
 }
 
+.label .nounderline img{
+  margin: .5em 0 0 0
+}
+
 .label h3 {
   color: white;
   position: absolute;
